--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1337,3 +1337,17 @@ a:focus {
 .Vue-Toastification__toast-body {
   font-family: 'Vazir', sans-serif;
 }
+
+/* Fade in Image */
+.fade-in-image {
+  animation: fadeIn 1s;
+  -webkit-animation: fadeIn 1s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
